add dcm lints for bloc library

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   connectivity_plus: ^6.1.4
+  bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   mockito: ^5.5.0
