--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   connectivity_plus: ^6.1.4
   bloc: ^9.1.0
   flutter_bloc: ^9.1.1
+  provider: ^6.1.5+1
 
 dev_dependencies:
   mockito: ^5.5.0
